--- a/animais-fantasticos-projeto/index.html
+++ b/animais-fantasticos-projeto/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>Animais Fantásticos</title>
 </head>
@@ -11,16 +12,16 @@
 <body>
   <nav class="menu">
     <ul>
-      <li><a href="#animais"></a></li>
-      <li><a href="#faq"></a></li>
-      <li><a href="#contato"></a></li>
+      <li><a href="#animais">Animais</a></li>
+      <li><a href="#faq">Faq</a></li>
+      <li><a href="#contato">Contato</a></li>
       <li><a href="#https://www.origamid.com/">Dev →</a></li>
     </ul>
   </nav>
 
   <section class="grid-section animais" id="animais">
     <h1 class="titulo">Animais fantásticos</h1>
-    <ul>
+    <ul class="animais-lista">
       <li>
         <img src="img/imagem1.jpg">
       </li>
@@ -104,8 +105,8 @@
   </section>
 
   <section class="grid-section faq" id="faq">
-    <h1>FAQ</h1>
-    <dl>
+    <h1 class="titulo">FAQ</h1>
+    <dl class="faq-lista">
       <dt>Qual a idade dos animais?</dt>
       <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
 
@@ -121,6 +122,7 @@
   </section>
 
   <section class="grid-section contato" id="contato">
+    <h1 class="titulo">Contato</h1>
     <div class="mapa">
       <img src="img/mapa.png">
     </div>
